Correction z-index celsius

--- a/includes/assets/css/mobile/style.css
+++ b/includes/assets/css/mobile/style.css
@@ -423,7 +423,7 @@ aside
   border-radius: 50%;
   transform: scale(1);
   transform-origin: center center;
-  z-index: 4;
+  z-index: 6;
 	filter: drop-shadow(0 0 0.4vw #7c7c7c);
 }
 
@@ -434,7 +434,7 @@ aside
 	width: calc(100vw - 4vh);
 	max-height: calc(50vh - 2vh);
 	margin-left: 2vh;
-	z-index: 3;
+	z-index: 5;
 	border-radius: 1vw;
 	box-shadow: 0 0 1vw #7c7c7c;
 	overflow: hidden;
